--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marks Calculator</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="background">
-    <div class="container">
-      <div class="box">
-        
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marks Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="background">
+      <div class="container">
+        <div class="box">
+          <form class="calculate-form" id="calulateForm">
+            <input type="number" name="math" placeholder="Maths" />
+            <input type="number" name="english" placeholder="English" />
+            <input type="number" name="hindi" placeholder="Hindi" />
+            <input type="number" name="science" placeholder="Science" />
+            <button type="submit" class="primary-btn">Calculate</button>
+          </form>
+        </div>
+        <div class="content">
+          <h2>Calculate Your</h2>
+          <h1>Percentage</h1>
+        </div>
       </div>
     </div>
-  </div>
-  <script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
