--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="background">
       <div class="container">
         <div class="box">
-          <form class="calculate-form" id="calulateForm">
+          <form onsubmit="calculateMarks(event)" class="calculate-form" id="calulateForm">
             <input type="number" name="math" placeholder="Maths" />
             <input type="number" name="english" placeholder="English" />
             <input type="number" name="hindi" placeholder="Hindi" />
